# bz3

./: .gitignore  1  AGENTS-forge.md  AGENTS.md  BGFX-IMGUI-VULKAN-CRASHES.md  BGFX-IMGUI-VULKAN-RENDER.md  CMakeLists.txt  CONFIG-SCHEMA.md  ECS-USAGE.md  GAME-ENGINE-SPLIT-PLAN.md  NEW-ENGINE-REFACTOR.md  PathStatement.txt  RADAR-ISSUES.md  README.md  REFACTOR-TRACKER.md  TODO-MAKE-KARMA-STANDALONE.md  TODO-forge.md  TODO.md  architecture.md  bzbuild-old.sh  bzbuild.py  forge_databz3.memleaks  imgui.ini  rebuild-all.sh  setup.bat  setup.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
cmake/: diligent_wayland_apply.py
data/client/: config.json
data/client/effects/: orb.efkefc
data/client/ui/: console.rcss  console.rml  console_panel_bindings.rcss  console_panel_bindings.rml  console_panel_community.rml  console_panel_documentation.rcss  console_panel_documentation.rml  console_panel_settings.rcss  console_panel_settings.rml  console_panel_start_server.rml  console_panel_themes.rcss  hud.rcss  hud.rml  main_menu.rcss  main_menu.rml  rmlui_hud.rcss  rmlui_hud.rml  rmlui_panel_community.rcss  rmlui_panel_community.rml  rmlui_panel_documentation.rml  rmlui_panel_settings.rcss  rmlui_panel_settings.rml  rmlui_panel_start_server.rml  rmlui_panel_themes.rml
data/common/: config.json
data/common/models/: shot.glb
data/common/shaders/: radar.frag  vintage.frag
data/forge/shaders/: brightness.frag  brightness.frag.spv  brightness.vert  brightness.vert.spv  imgui.vert  imgui.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_debug.vert  mesh_debug.vert.spv  rmlui.vert  rmlui.vert.spv  ui_overlay.frag  ui_overlay.frag.spv  ui_overlay.vert  ui_overlay.vert.spv
data/plugins/: bzapi.pyi  bzpyapi.py
data/server/: config.json
data/strings/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  jp.json  ko.json  pt.json  ru.json  zh.json
docs/agent-prompts/: _TEMPLATE.md  gui-hud.md  webserver.md
forge_data/: bz3.memleaks  gpu.cfg  gpu.data
include/karma/: karma.h
include/karma/app/: engine_app.hpp  engine_config.hpp  game_interface.hpp
include/karma/audio/: audio.hpp  backend.hpp
include/karma/common/: config_helpers.hpp  config_store.hpp  config_validation.hpp  curl_global.hpp  data_dir_override.hpp  data_path_resolver.hpp  file_utils.hpp  i18n.hpp  json.hpp
include/karma/core/: types.hpp
include/karma/ecs/: components.h  components.hpp  registry.hpp  system_graph.h  system_graph.hpp  types.h  types.hpp  world.h  world.hpp
include/karma/geometry/: mesh_loader.hpp
include/karma/graphics/: backend.hpp  device.hpp  resources.hpp  texture_handle.hpp  types.hpp  ui_render_target_bridge.hpp
include/karma/input/: bindings_text.hpp  input.hpp
include/karma/network/: enet_transport.hpp  transport.hpp  transport_factory.hpp
include/karma/physics/: backend.hpp  physics_world.hpp  player_controller.hpp  rigid_body.hpp  static_body.hpp  types.hpp
include/karma/platform/: events.hpp  window.hpp
include/karma/renderer/: renderer_context.hpp  renderer_core.hpp  scene_renderer.hpp
include/karma/ui/: overlay.h  overlay.hpp  types.h  types.hpp
include/karma/world/: backend.hpp  content.hpp
scripts/: build_bgfx_shaders.sh  build_filament.sh  build_filament_docker.sh  build_forge_shaders.sh  start_servers.sh
src/: AGENTS.md  GUI-HUD.codex  README.md  architecture.md
src/audio/: audio.cpp  audio.hpp
src/client/: actor.cpp  actor.hpp  client.cpp  client.hpp  client_cli_options.cpp  client_cli_options.hpp  config_client.cpp  config_client.hpp  console.cpp  console.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  shot.cpp  shot.hpp  world.cpp  world.hpp  world_session.cpp  world_session.hpp
src/common/: config_helpers.cpp  config_helpers.hpp  curl_global.hpp  data_dir_override.cpp  data_dir_override.hpp  data_path_resolver.cpp  data_path_resolver.hpp
src/core/: types.hpp
src/engine/: AGENTS.md  CMakeLists.txt  README.md  architecture.md  client_engine.cpp  client_engine.hpp  mesh_loader.cpp  mesh_loader.hpp  server_engine.cpp  server_engine.hpp  types.hpp  user_pointer.hpp
src/engine/app/: AGENTS.md  (+5 more)
src/game/: AGENTS.md  CMakeLists.txt  README.md  architecture.md
src/input/: input.cpp  input.hpp
src/network/: backend.hpp  backend_factory.cpp  client_network.cpp  client_network.hpp  enet_transport.cpp  proto_codec.cpp  proto_codec.hpp  server_network.cpp  server_network.hpp  transport.hpp  transport_factory.hpp
src/physics/: backend_factory.cpp  physics_world.cpp  physics_world.hpp  player_controller.cpp  rigid_body.cpp  rigid_body.hpp  static_body.cpp  static_body.hpp
src/platform/: window.hpp
src/protos/: messages.proto
src/render/: mesh_loader.cpp  particle_effect_system.cpp  render.cpp  render.hpp
src/renderer/: backend_factory.cpp  mesh_loader.cpp  render.hpp
src/server/: chat.cpp  chat.hpp  client.cpp  client.hpp  community_heartbeat.cpp  community_heartbeat.hpp  game.cpp  game.hpp  heartbeat_client.cpp  heartbeat_client.hpp  main.cpp  plugin.cpp  plugin.hpp  server_cli_options.cpp  server_cli_options.hpp  server_discovery.cpp  shot.cpp  shot.hpp  terminal_commands.cpp  world.cpp  world.hpp  world_session.cpp  world_session.hpp
src/ui/: backend.hpp  backend_factory.cpp  system.cpp  system.hpp
src/world/: backend.hpp  content.cpp  content.hpp
vcpkg-overlays/assimp/: portfile.cmake
vcpkg-overlays/bgfx/: no-spvremapper-include.patch  no-spvremapper.patch  portfile.cmake
vcpkg-overlays/filament/: 0001-skip-tools-option.patch  portfile.cmake  vcpkg.json
webserver/: AGENTS.md  PROMPT.codex  README.md  TODO.md  config.json  test-data.json
webserver/bz3web/: __init__.py  admin_auth.py  app.py  auth.py  cli.py  config.py  db.py  lightbox.py  logging_utils.py  markdown_utils.py  ratelimit.py  router.py  uploads.py  views.py  webhttp.py
webserver/data/: test-data.json
webserver/strings/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  jp.json  ko.json  pt.json  ru.json  zh.json
webserver/tests/: heartbeat.py  makedata.py  validate_strings.py
(+843 files in other folders)
